# velocirepo

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  action.yml  go.mod  go.sum  great-docs.yml  import_devrel_io.py  install.sh  justfile  linkedin-oauth.md  plan-linkedin.md  plan-views.md  possible-fetchers.md  velocirepo.toml
.github/workflows/: ci.yml  docs.yml  release.yml  test-tap-token.yml
cmd/velocirepo/: main.go
internal/auth/: dotenv.go  dotenv_test.go  introspect.go  introspect_test.go  oauth.go  oauth_test.go
internal/badge/: badge.go  badge_test.go  measure.go  presets.go
internal/config/: config.go  config_test.go  detect.go  detect_test.go  validate.go  validate_test.go  write.go  write_test.go
internal/dateutil/: date.go
internal/fetch/: fetch.go  fetch_test.go  github_repos.go
internal/mcp/: handlers.go  handlers_test.go  server.go  sql_guard.go  sql_guard_test.go
internal/projectdata/: projectdata.go
internal/source/: content.go  cran.go  cran_test.go  github.go  github_events.go  github_events_test.go  github_test.go  github_traffic.go  github_traffic_test.go  helpers.go  helpers_test.go  homebrew.go  homebrew_test.go  http_json.go  linkedin.go  linkedin_test.go  openvsx.go  openvsx_test.go  plausible.go  plausible_test.go  pypi.go  pypi_test.go  source.go  source_test.go  youtube.go  youtube_test.go
internal/sourceinfo/: sources.go
internal/store/: aggregate.go  aggregate_test.go  build_db.go  content.go  (+21 more)
python/: build_wheels.py  pyproject.toml
python/src/velocirepo/: __init__.py  __main__.py
views/: .gitignore
(+94 files in other folders)
