[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velocirepo"
dynamic = ["version"]
description = "All your open-source and social-media metrics in one place"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jeroen Janssens", email = "jeroen@jeroenjanssens.com" }]
keywords = ["metrics", "github", "pypi", "analytics", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Other",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/jeroenjanssens/velocirepo"
Repository = "https://github.com/jeroenjanssens/velocirepo"
Issues = "https://github.com/jeroenjanssens/velocirepo/issues"

[project.scripts]
velocirepo = "velocirepo.__main__:main"

[tool.hatch.version]
path = "src/velocirepo/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/velocirepo"]
